2009-07-30 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-action-profile.c:
	* src/common/na-xml-names.h:
	* src/nact/nact-icommand-tab.c:
	* src/nact/nautilus-actions-config-tool.ui:
	Add %p (port number) and %R (list of URIs) parameters.

	* src/nact/nautilus-actions-config-tool.ui:
	Define mnemonic and tooltip for each tab of the notebook.

2009-07-29 Pierre Wieser <pwieser@trychlos.org>

	* exports/nautilus-actions.schema.in:
	Remove files as it is rebuildable via nautilus-actions-schemas.

	* m4/na-cmdline-tools.m4: Deleted file.

	* m4/na-log-domains.m4:
	Define a new log domain for test programs.

	* src/common/na-gnome-vfs-uri.c:
	* src/common/na-gnome-vfs-uri.h: New files.

	* src/common/na-action-profile.c:
	Take advantage of new na_gnome_vfs_uri_parse() function.

	* src/test/test-parse-uris.c:
	* src/test/test-parse-uris.h: New files.

	* src/common/na-xml-names.h:
	* src/nact/nautilus-actions-config-tool.ui:
	Remove all mentions of GnomeVFS or GVfs.

	* src/common/na-action-profile.c:
	* src/common/na-action.c:
	* src/common/na-action.h:
	* src/common/na-gconf.c:
	* src/common/na-iio-provider.c:
	* src/common/na-xml-writer.c:
	* src/utils/nautilus-actions-schema.c:
	Factorize the definition of default labels.

	* po/POTFILES.in: Update the list of translatable files.

2009-07-28 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-iio-provider.c:
	Write action now accepts a NULL NAPivot to deal with command-line
	utility.

	* src/common/na-xml-names.h:
	Define new FORMAT_GCONFSCHEMA format to create a schema.

	* src/nact/nact-assist-export.{c,h}:
	Renamed as src/nact/nact-assistant-export.{c,h}.

	* src/nact/nact-assist-import.{c,h}:
	Renamed as src/nact/nact-assistant-import.{c,h}.

	* src/nact/nact-gconf-keys.h:
	Renamed as src/common/na-xml-names.h.

	* src/nact/nact-gconf-writer.{c,h}:
	Renamed as src/common/na-xml-writer.{c,h}.
	Create a schema on FORMAT_GCONFSCHEMA format.

	* src/nact/nact-gconf-reader.{c,h}: